--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "nodemailer": "^6.9.15"
+    "nodemailer": "^6.9.15",
+    "request": "^2.88.2"
   },
   "name": "website",
   "version": "1.0.0",
